tests/src/frontend/typechecking/invalid/inherit_typeclass_params_mixed2.sk
trait X(x: String)
trait Y(y: String)

base class B{b: String}

class C extends B uses X, Y
